update --enable-preview