@@ -16,13 +16,13 @@ maven clean install
 Iniciar os servidores de cada uma das três máquinas com seus horários locais.
 
 ```
-java -cp target/t3-berkeley-1.0.0.jar server.machine.Machine1
-java -cp target/t3-berkeley-1.0.0.jar server.machine.Machine2
-java -cp target/t3-berkeley-1.0.0.jar server.machine.Machine3
+java --enable-preview -cp target/t3-berkeley-1.0.0.jar server.machine.Machine1
+java --enable-preview -cp target/t3-berkeley-1.0.0.jar server.machine.Machine2
+java --enable-preview -cp target/t3-berkeley-1.0.0.jar server.machine.Machine3
 ```
 
 Executar a classe principal do algoritmo e verificar a mudança nos horários das três máquinas.
 
 ```
-java -jar target/t3-berkeley-1.0.0.jar
+java --enable-preview -jar target/t3-berkeley-1.0.0.jar
 ```
